# gitculture-cli

./: .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: skills.local.yaml.example
.claude/skills/actions-usage/: SKILL.md
.claude/skills/actions-usage/scripts/: actions-usage.sh
.claude/skills/bootstrap-sibling/: SKILL.md
.claude/skills/bootstrap-sibling/scripts/: bootstrap.sh
.claude/skills/doc-test-align/: SKILL.md
.claude/skills/doc-test-align/scripts/: check.sh
.claude/skills/mass-approve-prs/: SKILL.md
.claude/skills/mass-approve-prs/scripts/: mass-approve-prs.sh
.claude/skills/mass-merge-prs/: SKILL.md
.claude/skills/mass-merge-prs/scripts/: mass-merge-prs.sh
.claude/skills/pr-review/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/recall/scripts/: recall.sh
.claude/skills/remember/: SKILL.md
.claude/skills/remember/scripts/: remember.sh
.claude/skills/version-bump/: SKILL.md
.claude/skills/version-bump/scripts/: bump.py
.github/workflows/: publish.yml  tests.yml
docs/steward/: suggestions.md
ghafi/: __init__.py  __main__.py  _api.py  _env.py
ghafi/cli/: __init__.py  _errors.py  _output.py
ghafi/cli/_commands/: __init__.py  explain.py  learn.py  overview.py  pr.py  repo.py  whoami.py
ghafi/explain/: __init__.py  catalog.py
gitculture/: __init__.py  __main__.py  _api.py  _env.py
gitculture/cli/: __init__.py  _errors.py  _output.py
gitculture/cli/_commands/: __init__.py  explain.py  learn.py  overview.py  pr.py  repo.py  whoami.py
gitculture/explain/: __init__.py  catalog.py
packaging/ghafi/: README.md  pyproject.toml
tests/: conftest.py  test_cli_entry.py  test_cli_explain.py  test_cli_learn.py  test_cli_overview.py  test_cli_pr.py  test_cli_repo_create.py  test_cli_repo_env.py  test_cli_repo_scaffold.py  test_cli_whoami.py  test_errors.py  test_mutation_safety.py  test_output.py
