# Compatibility shim distribution.
#
# `ghafi` was renamed to `gitculture-cli`. To keep `pip install ghafi`
# working, this is a tiny metapackage with NO modules of its own — it just
# depends on `gitculture-cli`, which ships the real `gitculture` package and
# provides BOTH the `gitculture` and `ghafi` console-script entry points.
#
# The version and the `gitculture-cli==` pin below are kept in lockstep with
# the canonical version in ../../pyproject.toml. CI (`.github/workflows/
# publish.yml`) re-stamps both from the canonical version before every build,
# so this file's literals are a sane local default, not the source of truth.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghafi"
version = "0.5.0"
description = "Compatibility shim — ghafi is now gitculture-cli. Installs gitculture-cli, which provides the `gitculture` and `ghafi` commands."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
]
dependencies = ["gitculture-cli==0.5.0"]

[project.urls]
Homepage = "https://github.com/agentculture/ghafi"
Issues = "https://github.com/agentculture/ghafi/issues"

# Metapackage: no Python modules ship in this wheel, only the dependency.
[tool.hatch.build.targets.wheel]
bypass-selection = true
